<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/page_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:height="50sp"
        android:text="@string/page_name1"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="187dp"
        android:layout_height="182dp"

        app:srcCompat="@drawable/reze" />
    <TextView
        android:id="@+id/username1"
        android:text="@string/username1"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="200sp"
        android:layout_gravity="end"

        android:layout_marginTop="-140sp">

    </TextView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="150sp"
        android:layout_gravity="end"
        android:layout_marginRight="30sp">
        <LinearLayout
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/balance"
                android:textSize="20sp"
                android:layout_marginLeft="30sp">

            </TextView>
            <TextView
                android:id="@+id/user1_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="">

            </TextView>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="182sp"
            android:layout_marginTop="100sp"
            >

            <ImageView
                android:layout_width="187sp"
                android:layout_height="182sp"

                app:srcCompat="@drawable/makima"

                >

            </ImageView>
            <TextView
                android:id="@+id/username2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username2"
                android:textSize="20sp"
                android:layout_marginTop="50sp"
                >

            </TextView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80sp"
                android:layout_marginLeft="-120sp"
                >

                <TextView
                    android:id="@+id/balance2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/balance"
                    android:textSize="20sp"
                    android:layout_marginLeft="40sp"
                    >

                </TextView>
                <TextView
                    android:id="@+id/user2_balance"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:text="">

                </TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250sp"
        android:layout_marginTop="20sp">
        <TextView
            android:id="@+id/msg_sender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_sender"
            android:textSize="15sp">

        </TextView>
        <Spinner
            android:id="@+id/name_msg_sender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/msg_sender">

        </Spinner>

        <TextView
            android:id="@+id/msg_rcp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_rcp"
            android:layout_below="@id/name_msg_sender"
            android:layout_marginTop="20sp"
            android:textSize="15sp">

        </TextView>

        <Spinner
            android:id="@+id/name_msg_rcp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/msg_rcp"
            >

        </Spinner>

        <EditText
            android:id="@+id/input_summa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_msg_rcp"
            android:layout_centerInParent="true"
            android:width="170sp"
            android:hint="@string/summa_hint"
            android:inputType="number"
            android:textAlignment="center"
            android:textColorHint="@color/grey">

        </EditText>

        <Button
            android:id="@+id/transfer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_summa"
            android:layout_centerInParent="true"
            android:layout_marginTop="10sp"
            android:background="@drawable/btn_enter_background"
            android:text="@string/btn_enter_transfer">

        </Button>
    </RelativeLayout>
</LinearLayout>